# acjs

./: .gitignore  manage.py  pyproject.toml  pytest.ini
.run/: Pytest models properties.run.xml  runserver.run.xml
acjs/: asgi.py  settings.py  urls.py  wsgi.py
rentals/: admin.py  apps.py  models.py  signals.py  urls.py  urls_buildings.py  urls_leases.py  urls_owners.py  urls_properties.py  urls_tenants.py  views.py
rentals/migrations/: 0001_initial.py
rentals/models/: __init__.py  buildings.py  leases.py  owners.py  properties.py  tenants.py
rentals/static/rentals/css/: styles.css
rentals/templates/rentals/: base.html  home.html  lease_detail.html  lease_list.html
rentals/templates/rentals/buildings/: building_confirm_delete.html  building_detail.html  building_form.html  building_list.html
rentals/templates/rentals/leases/: lease_confirm_delete.html  lease_detail.html  lease_form.html  lease_list.html
rentals/templates/rentals/owners/: owner_confirm_delete.html  owner_detail.html  owner_form.html  owner_list.html  owner_list.http
rentals/tests/: conftest.py  test_signals.py
rentals/tests/models/: test_buildings.py  test_properties.py  test_tenant.py
rentals/urls/: __init__.py  buildings.py  home.py  leases.py  owners.py  properties.py  tenants.py
rentals/views/: __init__.py  buildings.py  home.py  leases.py  owners.py  properties.py  tenants.py
static/css/: styles.css
study/: forms.py  models.py  urls.py  views.py
study/migrations/: 0001_initial.py
study/templates/study/: property_detail.html  property_form.html
templates/: base.html
(+8 files in other folders)
