[project]
name = "acjs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
]
prod = [
    "gunicorn>=23.0.0",
]
tests = [
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest>=8.4.2",
]
